--- a/src/pages/wangyi/wangyi.html
+++ b/src/pages/wangyi/wangyi.html
@@ -1,12 +1,46 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
-    <title>js-bridge</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+    <head>
+        <meta charset="utf-8">
+        <!-- <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no"> -->
+        <meta name="viewport" data-content-max content="width=device-width,initial-scale=1,user-scalable=no">
+        <title>js-bridge</title>
+        <style>
+
+        </style>
+    </head>
+    <body>
+        <div id="app" style="width:7rem"></div>
+        <script>
+
+            (function(doc, win) {
+                var docEl = doc.documentElement,
+                    isIOS = navigator.userAgent.match(/\(i[^;]+;( U;)? CPU.+Mac OS X/),
+                    dpr = isIOS ? Math.min(win.devicePixelRatio, 3) : 1,
+                    dpr = window.top === window.self ? dpr : 1, //被iframe引用时，禁止缩放
+                    dpr = 1,
+                    
+                    scale = 1 / dpr,
+                    resizeEvt = 'orientationchange' in window ? 'orientationchange' : 'resize';
+                    
+                docEl.dataset.dpr = dpr;
+                var metaEl = doc.createElement('meta');
+                metaEl.name = 'viewport';
+                metaEl.content = 'initial-scale=' + scale + ',maximum-scale=' + scale + ', minimum-scale=' + scale;
+                docEl.firstElementChild.appendChild(metaEl);
+                var recalc = function() {
+                    var width = docEl.clientWidth;
+                    if (width / dpr > 375) {
+                        width = 375 * dpr;
+                    }
+                    // 乘以100，px : rem = 100 : 1
+                    docEl.style.fontSize = 16 * (width / 375) + 'px';
+                };
+                recalc()
+                if (!doc.addEventListener) return;
+                win.addEventListener(resizeEvt, recalc, false);
+            })(document, window);
+        </script>
+        <!-- built files will be auto injected -->
+    </body>
 </html>
